apps/ollama/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ollama
  namespace: shikanime
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: ollama
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ollama
    spec:
      containers:
        - name: ollama
          image: ollama:0.1.22
          ports:
            - containerPort: 11434
              name: http
          volumeMounts:
            - name: cache
              mountPath: /root/.ollama
      volumes:
        - name: cache
          persistentVolumeClaim:
            claimName: ollama-cache
