apps/ollama/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ollama
  namespace: shikanime
spec:
  ports:
    - port: 11434
      targetPort: http
  type: LoadBalancer
  loadBalancerClass: tailscale
  selector:
    app.kubernetes.io/name: ollama
