apps/ollama/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ollama
  namespace: shikanime
spec:
  defaultBackend:
    service:
      name: ollama
      port:
        name: http
  tls:
    - hosts:
        - ollama
